Fix a layout breaking issue when the bus is out of service

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ ul {
     padding: 0;
     list-style: none;
     display: none;
+    width: 100%;
 }
 
 li:first-child {
